--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,11 @@ header {
     text-align: center;
     font-size: 28px;
     font-weight: bold;
+    margin-left: 10px;
+}
+
+h1{
+    margin-left: 10px;
 }
 
 .container {
@@ -36,8 +41,9 @@ input[type="file"] {
     padding: 10px;
     border-radius: 8px;
     border: 1px solid #ccc;
-    width: 90%;
+    width: 50%;
     margin-bottom: 15px;
+    margin-left: 10px;
 }
 
 button {
@@ -91,12 +97,14 @@ tr:hover {
 .badge {
     padding: 4px 8px;
     border-radius: 5px;
+    margin-bottom: 5px;
     color: white;
     font-weight: bold;
     font-size: 12px;
 }
-
 /* Hamle türü renkleri */
+.Brilliant  { background-color: #1AABA8; }
+.Great      { background-color: #5F8AAC; }
 .Best       { background-color: #99BC46; }
 .Excellent  { background-color: #98BD56; }
 .Good       { background-color: #97AF8B; }
