--- a/static/style.css
+++ b/static/style.css
@@ -175,3 +175,16 @@ tr:hover {
   margin-bottom: 5px;
   display: block;
 }
+.pagination {
+  margin-top: 20px;
+}
+.pagination a, .pagination strong {
+  margin: 0 5px;
+  text-decoration: none;
+  font-size: 16px;
+}
+.pagination strong {
+  font-weight: bold;
+  color: #000;
+}
+
